--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "authors": [
         {
             "name": "Roberto Gallea",
-            "email": "write@robertogallea.com"
+            "email": "roberto.gallea@unipa.it"
         }
     ],
     "require": {
