Added some tests

--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,11 @@
             "italia\\DesignLaravelTheme\\": "src/"
         }
     },
+    "autoload-dev": {
+        "classmap": [
+            "tests/TestCase.php"
+        ]
+    },
     "extra": {
         "laravel": {
             "providers": [
